--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
+# dependencies
 node_modules
+package-lock.json
+
+# Components
+services/*
 public/bundle.js
 public/path~vendor.bundle.js
-services/*
-package-lock.json
+
+# testing
+newrelic.js
+newrelic_agent.log
