--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "newrelic": "^5.10.0",
     "nodemon": "^1.19.1",
     "webpack": "^4.32.2",
     "webpack-bundle-analyzer": "^3.3.2",
@@ -28,6 +29,7 @@
     "path": "^0.12.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "request": "^2.88.0",
     "style-loader": "^0.23.1",
     "styled-components": "^4.2.0",
     "url": "^0.11.0"
