--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "cors": "^2.8.5",
     "css-loader": "^2.1.1",
     "express": "^4.17.1",
+    "newrelic": "^5.10.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "request": "^2.88.0",
     "style-loader": "^0.23.1",
     "styled-components": "^4.2.0",
     "url": "^0.11.0"
