--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
     "webpack-cli": "^3.3.2"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "cors": "^2.8.5",
     "css-loader": "^2.1.1",
     "express": "^4.17.1",
+    "k6": "0.0.0",
+    "newrelic": "^5.10.0",
+    "path": "^0.12.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "request": "^2.88.0",
     "style-loader": "^0.23.1",
     "styled-components": "^4.2.0",
     "url": "^0.11.0"
