--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./proxy/index.js",
+    "deploy": "node ./proxy/index.js",
     "build": "webpack --mode development --watch"
   },
   "keywords": [],
