--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "newrelic": "^5.10.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "redis": "^2.8.0",
     "request": "^2.88.0",
     "style-loader": "^0.23.1",
     "styled-components": "^4.2.0",
